force-app/main/default/objects/AI_Delivery_Request__c/AI_Delivery_Request__c.object-meta.xml
<CustomObject>
    <label>AI Delivery Request</label>
    <pluralLabel>AI Delivery Requests</pluralLabel>
    <nameField>
        <label>Request Number</label>
        <type>AutoNumber</type>
        <displayFormat>REQ-{00000}</displayFormat>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>