force-app/main/default/objects/AI_Delivery_Request__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <required>true</required>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>User Story</fullName>
            </value>
            <value>
                <fullName>UAT Test</fullName>
            </value>
            <value>
                <fullName>Executive Status</fullName>
            </value>
            <value>
                <fullName>RAID Log</fullName>
            </value>
            <value>
                <fullName>Meeting Prep</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>