force-app/main/default/objects/AI_Delivery_Request__c/fields/Generated_Response__c.field-meta.xml
<CustomField>
    <fullName>Generated_Response__c</fullName>
    <label>Generated Response</label>
    <type>LongTextArea</type>
    <length>131072</length>
</CustomField>