force-app/main/default/objects/AI_Delivery_Request__c/fields/Readiness_Score__c.field-meta.xml
<CustomField>
    <fullName>Readiness_Score__c</fullName>
    <label>Readiness Score</label>
    <type>Number</type>
    <precision>5</precision>
    <scale>2</scale>
</CustomField>